--- a/input/activity-indicator.html
+++ b/input/activity-indicator.html
@@ -1,4 +1,4 @@
-<div class="ispinner">
+<div id="activity-indicator" class="ispinner">
   <div class="ispinner-blade"></div>
   <div class="ispinner-blade"></div>
   <div class="ispinner-blade"></div>
