snake case id to match other declarations

--- a/input/index.html
+++ b/input/index.html
@@ -3,7 +3,7 @@
   // Elements
   const runButton = document.getElementById('run-button');  
   const specs = document.getElementById('specs');
-  const generatedCode = document.getElementById("generatedCode");
+  const generatedCode = document.getElementById("generated-code");
   const activityIndicator = document.getElementById("activity-indicator");
   const successIndicator = document.getElementById("success-indicator");
   const failureIndicator = document.getElementById("failure-indicator");
@@ -53,7 +53,7 @@
           <failure-indicator></failure-indicator>
         </div>
       </hstack>
-      <textarea id="generatedCode" class="jet"readonly></textarea>
+      <textarea id="generated-code" class="jet"readonly></textarea>
       <hstack id="count">
         <spacer></spacer>
         <span id="iteration-count"></span>
